# fastapi-tdd-docker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.web  Dockerfile.worker  LICENSE  README.md  aerich.ini  alembic.ini  docker-compose.yml  entrypoint.sh  heroku.yml  init_db.py  pyproject.toml  release.sh  tox.ini
.github/workflows/: codeql-analysis.yml  main.yml
alembic/: env.py
alembic/versions/: 0abf27951d83_add_type_annotations.py  15f3a3a3ee66_initial_migration.py  4f5f4beb31b0_initial_migration.py  99dd5be698b4_changed_field_to_text.py
app/: config.py  main.py
app/api/: home_page.py  token.py
app/api/v1/endpoints/: summaries.py
app/api/v2/: routers.py
app/api/v2/endpoints/: ping.py  summaries.py  users.py
app/background/: tasks.py  worker.py
app/config/: __init__.py
app/crud/: crud_summary.py  crud_user.py
app/database/: __init__.py
app/language_detection/: __init__.py
app/migrations/models/: 1_20210809181000_None.sql
app/models/: __init__.py  summary.py
app/schemas/: summary.py  token.py  user.py
app/security/: auth.py
app/summarization/: summarizer.py
app/tests/: conftest.py  test_config.py  test_init_db.py  test_main.py
app/tests/api/: test_home_page.py  test_token.py
app/tests/api/v2/: test_ping_endpoint.py  test_summaries_endpoint.py  test_users_endpoint.py
app/tests/background/: test_tasks.py
app/tests/models/: test_summary_model.py  test_user_model.py
app/tests/security/: test_auth.py
project/: .dockerignore  Dockerfile  Dockerfile.prod  aerich.ini  entrypoint.sh  init_db.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
project/app/: config.py  db.py  initial_schema.py  main.py  summarizer.py
project/app/api/: crud.py  summaries.py
project/app/api/v1/: routers.py
project/app/api/v2/endpoints/: ping.py  summaries.py
project/app/background/: tasks.py
project/app/crud/: crud_summary.py
project/db/: Dockerfile
project/migrations/models/: 0_20210108172553_init.sql
project/tests/: conftest.py  test_config.py  test_init_db.py  test_summaries.py  test_summaries_unit.py
project/tests/api/v1/: conftest.py  test_ping.py  test_summaries.py
project/tests/api/v2/: conftest.py  test_summaries.py  test_summaries_unit.py
project/tests/background/: conftest.py  test_tasks.py
project/tests/models/: test_summary.py
scripts/: release.sh
tests/: test_config.py  test_init_db.py
tests/api/v1/: conftest.py  test_summaries.py  test_summaries_unit.py
tests/api/v2/: conftest.py  test_summaries.py  test_summaries_unit.py
tests/background/: conftest.py  test_tasks.py
tests/models/: test_summary.py
