[tool.black]
exclude = '''
/(
  | migrations
)/
'''
line-length = 119

[tool.isort]
line_length = 119
profile = "black"
skip_glob = ["*/migrations/*"]

[tool.coverage]
[tool.coverage.run]
omit = ["*/migrations/*", "tests/*", "*conftest.py"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --strict-markers"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.poetry]
authors = ["Evgeni Sautin <evgeni.sautin@gmail.com>"]
description = "Test-driven development with FastAPI and Docker"
name = "fastapi-tdd-docker"
version = "2.0.0"

[tool.poetry.dependencies]
aerich = "^0.7.1"
celery = "^5.2.7"
email-validator = "^1.3.1"
fastapi = "^0.95.0"
gunicorn = "^20.1.0"
newspaper3k = "^0.2.8"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python = "^3.11"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
python-multipart = "^0.0.6"
redis = "^4.5.3"
tortoise-orm = { extras = ["asyncpg", "aiomysql"], version = "^0.19.3" }
uvicorn = { extras = ["standard"], version = "^0.21.1" }

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"
isort = "^5.12.0"
ruff = "^0.0.263"
mypy = "^1.1.1"
pre-commit = "^3.2.0"
pylint = "^2.17.1"
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"
pytest-cov = { extras = ["toml"], version = "^4.0.0" }
pytest-xdist = { extras = ["psutil"], version = "^3.2.1" }
httpx = "^0.23.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
