[tool.black]
line-length = 119

[tool.isort]
line_length = 119
profile = "black"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.ruff]
line-length = 119

[tool.flake8]
max-line-length = 119
max-complexity = 10
extend-ignore = ["E203"]

[tool.coverage]
[tool.coverage.run]
omit = ["tests/*", "*conftest.py",]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --strict-markers"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.poetry]
authors = ["Evgeni Sautin <evgeni.sautin@gmail.com>"]
description = "Test-driven development with FastAPI and Docker"
name = "fastapi-tdd-docker"
version = "2.0.0"

[tool.poetry.dependencies]
python = "^3.11"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
python-multipart = "^0.0.6"
fastapi = "^0.95.0"
celery = "^5.2.7"
gunicorn = "^20.1.0"
uvicorn = { extras = ["standard"], version = "^0.21.1" }
email-validator = "^1.3.1"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
newspaper3k = "^0.2.8"
transformers = {extras = ["torch"], version = "^4.34.1"}
sentencepiece = "^0.1.99"
redis = "^4.5.3"
sqlalchemy = { extras = ["pymysql", "aiosqlite", "asyncmy"], version = "^2.0.15" }
alembic = "^1.10.3"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"
isort = "^5.12.0"
ruff = "^0.0.263"
mypy = "^1.1.1"
pre-commit = "^3.2.0"
pylint = "^2.17.1"
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"
pytest-cov = { extras = ["toml"], version = "^4.0.0" }
pytest-xdist = { extras = ["psutil"], version = "^3.2.1" }
httpx = "^0.23.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
