[tool.black]
line-length = 119
target-version = ["py311"]

[tool.isort]
line_length = 119
profile = "black"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.isort]
known-first-party = ["pdm"]

[tool.coverage]
[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "*conftest.py"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --strict-markers"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.pdm]
[tool.pdm.dev-dependencies]
lint = [
    "pre-commit<4.0.0,>=3.5.0",
    "bandit>=1.7.5",
    "black<24.0.0,>=23.10.1",
    "isort<6.0.0,>=5.12.0",
    "ruff<1.0.0,>=0.1.3",
    "mypy<2.0.0,>=1.6.1",
    "pylint<3.1.0,>=2.17.1",
]
test = [
    "pytest<8.0.0,>=7.4.3",
    "pytest-asyncio<1.0.0,>=0.21.1",
    "pytest-cov<5.0.0,>=4.1.0",
    "pytest-xdist[psutil]<4.0.0,>=3.3.1",
    "httpx<1.0.0,>=0.25.0",
]

[tool.pdm.build]
includes = []

[project]
name = "fastapi-tdd-docker"
version = "2.0.0"
description = "Test-driven development with FastAPI and Docker"
authors = [{ name = "Evgeni Sautin", email = "evgeni.sautin@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "python-jose[cryptography]<4.0.0,>=3.3.0",
    "python-multipart<1.0.0,>=0.0.6",
    "fastapi<1.0.0,>=0.95.0",
    "celery<6.0.0,>=5.2.7",
    "gunicorn<21.1.2,>=20.1.0",
    "uvicorn[standard]<1.0.0,>=0.21.1",
    "email-validator>=2.1.0.post1",
    "pydantic-settings>=2.0.3",
    "passlib[bcrypt]<2.0.0,>=1.7.4",
    "newspaper3k<1.0.0,>=0.2.8",
    "transformers[torch]>=4.34.1",
    "sentencepiece<1.0.0,>=0.1.99",
    "redis[hiredis]>=5.0.1",
    "sqlalchemy[aiosqlite,asyncmy,pymysql]<3.0.0,>=2.0.15",
    "alembic<2.0.0,>=1.10.3",
]

[project.urls]
Repository = "https://github.com/spyker77/fastapi-tdd-docker"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
